--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         * { box-sizing: border-box; margin: 0; padding: 0; }
         body { font-family: 'Cairo', sans-serif; background-color: var(--white); color: var(--dark-brown); scroll-behavior: smooth; overflow-x: hidden; }
 
-        /* البنر العلوي */
+        /* البنر العلوي القهوائي */
         .top-banner { background: var(--dark-brown); color: var(--white); padding: 10px 5%; display: flex; justify-content: space-between; align-items: center; font-size: 14px; }
         .whatsapp-link-top { color: var(--white); text-decoration: none; font-weight: bold; display: flex; align-items: center; gap: 8px; }
 
@@ -29,10 +29,11 @@
         .nav-menu a { text-decoration: none; color: var(--dark-brown); font-weight: 700; cursor: pointer; font-size: 1rem; }
         .nav-menu a:hover { color: var(--primary-gold); }
 
+        /* التنقل بين الصفحات */
         .page-section { display: none; }
         .active-page { display: block; }
 
-        /* الهيرو */
+        /* قسم الهيرو الرئيسي */
         .hero { 
             height: 75vh; 
             background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.5)), url('https://i.ibb.co/0R1MK2d7/Gemini-Generated-Image-tnocdatnocdatnoc.png'); 
@@ -42,67 +43,50 @@
         .hero h1 { font-size: clamp(28px, 6vw, 55px); font-weight: 900; margin-bottom: 20px; }
         .hero span { color: var(--primary-gold); }
 
-        /* التواصل في الهيرو */
+        /* أيقونات التواصل في الهيرو */
         .social-hero { display: flex; gap: 20px; margin-top: 25px; }
         .social-hero a { color: var(--white); font-size: 1.8rem; transition: 0.3s; text-decoration: none; }
         .social-hero a:hover { color: var(--primary-gold); transform: translateY(-5px); }
 
-        /* أقسامنا تفاعلية بخط واحد */
-        .catalog-grid { 
-            display: flex; 
-            flex-wrap: nowrap; 
-            overflow-x: auto; 
-            gap: 20px; 
-            padding: 40px 5%; 
-            max-width: 1200px; 
-            margin: auto;
-            scrollbar-width: none; /* لإخفاء شريط التمرير في فايرفوكس */
-        }
-        .catalog-grid::-webkit-scrollbar { display: none; } /* لإخفاء شريط التمرير في كروم */
-        
-        .catalog-card { 
-            flex: 0 0 calc(25% - 15px); /* 4 صور في الصف الواحد */
-            position: relative; 
-            border-radius: 20px; 
-            overflow: hidden; 
-            height: 350px; 
-            cursor: pointer; 
-            box-shadow: 0 10px 30px rgba(0,0,0,0.1); 
-            transition: 0.3s ease;
-        }
+        /* أقسامنا - كتالوج تفاعلي بخط واحد */
+        .catalog-grid { display: flex; flex-wrap: nowrap; overflow-x: auto; gap: 20px; padding: 40px 5%; max-width: 1200px; margin: auto; scrollbar-width: none; }
+        .catalog-grid::-webkit-scrollbar { display: none; }
+        .catalog-card { flex: 0 0 calc(25% - 15px); position: relative; border-radius: 20px; overflow: hidden; height: 350px; cursor: pointer; box-shadow: 0 10px 30px rgba(0,0,0,0.1); transition: 0.3s ease; }
         .catalog-card:hover { transform: scale(1.03); }
         .catalog-card img { width: 100%; height: 100%; object-fit: cover; }
         .catalog-label { position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%); background: rgba(0,0,0,0.8); color: white; padding: 8px 20px; border-radius: 10px; font-weight: bold; white-space: nowrap; font-size: 0.9rem; }
 
-        /* لماذا شبابيك؟ */
+        /* لماذا شبابيك؟ المحدث */
         .features-section { background: var(--light-bg); padding: 80px 5%; text-align: center; }
-        .features-section h2 { 
-            font-size: 2.5rem; /* تم تصغير الحجم */
-            font-weight: 700; /* تغيير نوع الخط ليكون أنحف قليلاً */
-            margin-bottom: 40px; 
-            font-family: 'Cairo', sans-serif;
-        }
-        .features-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 30px; }
-        .feature-item i { font-size: 4.5rem; color: var(--primary-gold); margin-bottom: 20px; display: block; }
-        .feature-item h3 { font-size: 1.4rem; font-weight: 700; margin-bottom: 10px; }
-        .feature-item p { font-size: 1rem; opacity: 0.8; }
+        .features-section h2 { font-size: 2.5rem; font-weight: 800; margin-bottom: 10px; }
+        .features-subtitle { color: #888; margin-bottom: 50px; }
+        .features-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 25px; max-width: 1200px; margin: auto; }
+        .feature-card { background: var(--white); padding: 40px 20px; border-radius: 15px; box-shadow: 0 4px 20px rgba(0,0,0,0.03); text-align: center; }
+        .feature-icon-wrapper { width: 70px; height: 70px; background-color: var(--primary-gold); border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 25px; }
+        .feature-icon-wrapper i { color: var(--white); font-size: 1.8rem; }
 
-        /* تواصل معنا */
+        /* صفحة تواصل معنا */
         .contact-container { max-width: 1000px; margin: auto; display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; padding: 60px 5%; text-align: right; }
         .contact-info-box { background: var(--light-bg); padding: 30px; border-radius: 15px; }
         .contact-info-item { display: flex; align-items: center; gap: 15px; margin-bottom: 25px; }
-        .contact-info-item i { color: var(--primary-gold); font-size: 1.5rem; }
 
-        /* من نحن */
+        /* صفحة من نحن */
         .about-text { max-width: 900px; margin: auto; padding: 60px 5%; line-height: 2; text-align: justify; font-size: 1.2rem; }
 
-        /* الفوتر */
-        footer { background: var(--dark-brown); color: white; padding: 60px 5% 20px; }
-        .footer-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 40px; }
-        .whatsapp-link-footer { color: var(--primary-gold); text-decoration: none; font-weight: bold; display: flex; align-items: center; gap: 10px; margin-top: 10px; }
+        /* الفوتر المحدث */
+        .footer-section { background-color: var(--dark-brown); color: var(--white); padding: 60px 5% 30px; text-align: center; }
+        .footer-cta h2 { font-size: 2.2rem; font-weight: 700; margin-bottom: 15px; }
+        .cta-btns { display: flex; justify-content: center; gap: 15px; margin-bottom: 60px; }
+        .btn-catalog-footer { background-color: var(--primary-gold); color: white; border: none; padding: 12px 35px; border-radius: 8px; font-weight: bold; cursor: pointer; }
+        .btn-whatsapp-footer { background: transparent; border: 1px solid white; color: white; padding: 12px 35px; border-radius: 8px; font-weight: bold; cursor: pointer; }
+        .main-footer-grid { display: grid; grid-template-columns: 2fr 1fr 1fr 1.5fr; gap: 40px; text-align: right; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 50px; }
+        .footer-links-list { list-style: none; opacity: 0.8; line-height: 2; }
+        .footer-links-list li { cursor: pointer; }
 
         @media (max-width: 768px) {
-            .catalog-card { flex: 0 0 70%; } /* عرض صورة واحدة تقريباً على الجوال مع إمكانية السحب */
+            .catalog-card { flex: 0 0 75%; }
+            .main-footer-grid { grid-template-columns: 1fr; text-align: center; }
+            .cta-btns { flex-direction: column; }
         }
     </style>
 </head>
@@ -144,7 +128,7 @@
             </section>
 
             <section id="categories" style="padding-top: 80px;">
-                <h2 style="text-align:center; font-size:2.5rem; font-weight:900; margin-bottom:10px;">أقسامنا</h2>
+                <h2 style="text-align:center; font-size:2.5rem; font-weight:900;">أقسامنا</h2>
                 <p style="text-align:center; opacity:0.7; margin-bottom:20px;">اختر من بين مجموعتنا المتنوعة</p>
                 <div class="catalog-grid">
                     <div class="catalog-card"><img src="https://i.ibb.co/dsyqws88/curtain-blackout-BDZvwy-X3.jpg"><div class="catalog-label">بلاك أوت</div></div>
@@ -156,11 +140,12 @@
 
             <section class="features-section">
                 <h2>لماذا شبابيك؟</h2>
+                <p class="features-subtitle">مميزات تجعلنا الخيار الأول</p>
                 <div class="features-grid">
-                    <div class="feature-item"><i class="fa-solid fa-palette"></i><h3>تصاميم حصرية</h3></div>
-                    <div class="feature-item"><i class="fa-solid fa-ruler-combined"></i><h3>مقاسات مخصصة</h3></div>
-                    <div class="feature-item"><i class="fa-solid fa-truck-fast"></i><h3>تركيب منزلي</h3></div>
-                    <div class="feature-item"><i class="fa-solid fa-shield-halved"></i><h3>ضمان الجودة</h3></div>
+                    <div class="feature-card"><div class="feature-icon-wrapper"><i class="fa-solid fa-shield-halved"></i></div><h3>ضمان الجودة</h3><p>ضمان شامل على جميع منتجاتنا وخدماتنا</p></div>
+                    <div class="feature-card"><div class="feature-icon-wrapper"><i class="fa-solid fa-truck-fast"></i></div><h3>تركيب منزلي</h3><p>فريق متخصص لتركيب الستائر في منزلك</p></div>
+                    <div class="feature-card"><div class="feature-icon-wrapper"><i class="fa-solid fa-ruler-combined"></i></div><h3>مقاسات مخصصة</h3><p>تفصيل على حسب مقاسات نوافذك بدقة عالية</p></div>
+                    <div class="feature-card"><div class="feature-icon-wrapper"><i class="fa-solid fa-palette"></i></div><h3>تصاميم حصرية</h3><p>مجموعة متنوعة من التصاميم العصرية والكلاسيكية</p></div>
                 </div>
             </section>
         </div>
@@ -170,8 +155,9 @@
                 <h1>من نحن</h1>
             </section>
             <div class="about-text">
-                <h2 style="color:var(--dark-brown); margin-bottom:20px;">شبابيك للستائر</h2>
-                <p>تأسست شبابيك للستائر بهدف تقديم أفخم وأجود أنواع الستائر المنزلية في العراق. نؤمن بأن الستائر عنصر أساسي يعكس ذوق أصحاب المنزل ويضيف لمسة من الأناقة والفخامة.</p>
+                <h2>شبابيك للستائر</h2>
+                <p>تأسست شبابيك للستائر بهدف تقديم أفخم وأجود أنواع الستائر المنزلية في العراق. نؤمن بأن الستائر ليست مجرد قطعة قماش، بل هي عنصر أساسي في تصميم المنزل يعكس ذوق أصحابه ويضيف لمسة من الأناقة والفخامة.</p>
+                <p>نقدم تشكيلة متنوعة تشمل البلاك أوت والشفافة وستائر الرول، بخدمات تفصيل وتركيب احترافية.</p>
             </div>
         </div>
 
@@ -182,7 +168,7 @@
             <div class="contact-container">
                 <div class="contact-info-box">
                     <div class="contact-info-item"><i class="fa-solid fa-location-dot"></i><div><strong>العنوان:</strong> العراق - بغداد</div></div>
-                    <div class="contact-info-item"><i class="fa-brands fa-whatsapp"></i><div><strong>واتساب:</strong> تواصل معنا عبر واتساب</div></div>
+                    <div class="contact-info-item"><i class="fa-brands fa-whatsapp"></i><div><strong>واتساب:</strong> تواصل عبر واتساب</div></div>
                     <div class="contact-info-item"><i class="fa-solid fa-clock"></i><div><strong>ساعات العمل:</strong> السبت - الخميس 9ص - 9م</div></div>
                 </div>
                 <div style="background:var(--white); padding:30px; border-radius:15px; border:1px solid #ddd; text-align:center;">
@@ -193,19 +179,39 @@
         </div>
     </main>
 
-    <footer id="contact">
-        <div class="footer-grid">
+    <footer class="footer-section">
+        <div class="footer-cta">
+            <h2>جاهز لتجديد ستائر منزلك؟</h2>
+            <p>تواصل معنا الآن واحصل على استشارة مجانية وعرض سعر خاص</p>
+            <div class="cta-btns">
+                <button class="btn-catalog-footer" onclick="showPage('categories')">تصفح المنتجات</button>
+                <button class="btn-whatsapp-footer" onclick="location.href='https://wa.me/9647883002797'">تواصل عبر واتساب</button>
+            </div>
+        </div>
+
+        <div class="main-footer-grid">
             <div>
-                <h3 style="color:var(--primary-gold); margin-bottom:20px;">شبابيك للستائر</h3>
-                <p style="opacity:0.8;">نقدم أفخم تشكيلة ستائر منزلية بأعلى جودة وأفضل الأسعار.</p>
+                <h3>شبابيك للستائر</h3>
+                <p style="opacity:0.8; line-height:1.6;">نقدم أفخم تشكيلة ستائر منزلية بأعلى جودة وأفضل الأسعار.</p>
+            </div>
+            <div>
+                <h3>روابط سريعة</h3>
+                <ul class="footer-links-list">
+                    <li onclick="showPage('home')">الرئيسية</li>
+                    <li onclick="showPage('categories')">المنتجات</li>
+                    <li onclick="showPage('about')">من نحن</li>
+                </ul>
             </div>
             <div>
                 <h3>تواصل معنا</h3>
-                <p>العراق - بغداد</p>
-                <a href="https://wa.me/9647883002797" class="whatsapp-link-footer">تواصل معنا عبر واتساب <i class="fa-brands fa-whatsapp"></i></a>
+                <p style="opacity:0.8;">العراق - بغداد</p>
+                <p onclick="location.href='https://wa.me/9647883002797'" style="cursor:pointer; opacity:0.8;">واتساب</p>
+            </div>
+            <div style="font-weight:bold; display:flex; align-items:center; justify-content:flex-end;">
+                <p dir="ltr">+964 788 300 2797</p>
             </div>
         </div>
-        <p style="text-align:center; margin-top:40px; opacity:0.5; border-top:1px solid rgba(255,255,255,0.1); padding-top:20px;">© 2025 شبابيك للستائر جميع الحقوق محفوظة.</p>
+        <p style="text-align:center; margin-top:40px; opacity:0.5;">© 2025 شبابيك للستائر جميع الحقوق محفوظة.</p>
     </footer>
 
     <script>
