--- a/index.html
+++ b/index.html
@@ -87,4 +87,294 @@
         .about-container { max-width: 1100px; margin: auto; padding: 80px 5%; text-align: center; }
         .about-text-content { max-width: 900px; margin: 0 auto 50px; line-height: 2.2; font-size: 1.2rem; color: #444; text-align: justify; }
         .stats-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 35px; margin-top: 55px; }
-        .stat-card { background-color: #eee
+        .stat-card { background-color: #eee9e3; padding: 45px 25px; border-radius: 15px; transition: 0.3s; }
+        .stat-card:hover { background: var(--gold); color: white; }
+        .stat-number { font-size: 2.6rem; font-weight: 900; color: var(--gold); }
+        .stat-card:hover .stat-number { color: white; }
+
+        /* الفوتر القهوائي */
+        footer { background: var(--brown); color: white; padding: 70px 5% 35px; text-align: center; }
+        .footer-grid { display: grid; grid-template-columns: 2.5fr 1fr 1fr 1.5fr; gap: 45px; text-align: right; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 55px; margin-top: 55px; }
+        .footer-logo { font-weight: 900; font-size: 1.7rem; color: var(--gold); }
+
+        .admin-box { max-width: 600px; margin: 50px auto; background: #f4f4f4; padding: 30px; border-radius: 15px; text-align: right; }
+        .admin-box input, .admin-box select { width: 100%; padding: 12px; margin-bottom: 15px; border-radius: 8px; border: 1px solid #ccc; font-family: 'Cairo'; }
+
+        @media (max-width: 768px) {
+            header { flex-direction: column; gap: 20px; }
+            .logo-img { height: 75px; }
+            .footer-grid, .stats-grid, .product-view { grid-template-columns: 1fr; text-align: center; }
+            .cat-card { flex: 0 0 85%; }
+        }
+    </style>
+</head>
+<body>
+
+    <div class="top-banner">
+        <span>مرحباً بكم في شبابيك للستائر</span>
+        <span class="phone-fix">+964 788 300 2797 <i class="fa-solid fa-phone"></i></span>
+    </div>
+
+    <header>
+        <div class="brand-text">شبابيك<br><span style="font-size: 1.25rem; color: var(--gold);">للستائر</span></div>
+        <div class="logo-center">
+            <img src="https://i.ibb.co/3y1ZNCk0/1.png" class="logo-img" onclick="checkAdmin()" alt="شعار شبابيك">
+        </div>
+        <div class="header-left-actions">
+            <a href="https://wa.me/9647883002797" class="whatsapp-link">
+                <i class="fab fa-whatsapp" style="font-size: 1.6rem;"></i>
+                <span>تواصل معنا عبر الواتساب</span>
+            </a>
+            <div class="cart-icon" onclick="openCart()">
+                <i class="fas fa-shopping-basket"></i>
+                <span class="cart-count" id="globalCartCount">0</span>
+            </div>
+        </div>
+    </header>
+
+    <div class="nav-bar">
+        <ul class="nav-menu">
+            <li><a onclick="showPage('homePage')">الرئيسية</a></li>
+            <li><a onclick="showPage('homePage'); document.getElementById('categories').scrollIntoView()">المنتجات</a></li>
+            <li><a onclick="showPage('aboutPage')">من نحن</a></li>
+            <li><a onclick="showPage('contactPage')">تواصل معنا</a></li>
+        </ul>
+    </div>
+
+    <main id="mainContainer">
+        <div id="homePage" class="page active">
+            <section class="hero">
+                <h1>فخامة التفاصيل تبدأ من <br> <span>شبابيك منزلك</span></h1>
+                <p>اكتشف أفخم تشكيلة ستائر منزلية بتصاميم عصرية وكلاسيكية</p>
+                <div class="hero-btns">
+                    <button class="btn-gold" onclick="document.getElementById('categories').scrollIntoView()">احسب سعر ستارتك الآن</button>
+                    <button class="btn-outline" onclick="window.location.href='https://wa.me/9647883002797'">طلب استشارة منزلية</button>
+                </div>
+                <div class="social-hero">
+                    <a href="https://www.facebook.com/profile.php?id=61587692021311" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/shababek.curtains/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.tiktok.com/@shababek.curtains" target="_blank"><i class="fab fa-tiktok"></i></a>
+                    <a href="https://youtube.com/@shababek.curtains?si=KKsEbL98N0fq2e2U" target="_blank"><i class="fab fa-youtube"></i></a>
+                    <a href="https://x.com/ShababekCurtain" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="https://www.snapchat.com/add/shababek.curtains" target="_blank"><i class="fab fa-snapchat"></i></a>
+                </div>
+            </section>
+
+            <section id="categories">
+                <h2 style="text-align:center; margin-top:50px; font-size: 2.6rem; font-weight: 900;">أقسامنا</h2>
+                <div class="catalog-grid">
+                    <div class="cat-card" onclick="openCat('بلاك أوت')"><img src="https://i.ibb.co/dsyqws88/curtain-blackout-BDZvwy-X3.jpg"><div class="cat-label">بلاك أوت</div></div>
+                    <div class="cat-card" onclick="openCat('شفافة')"><img src="https://i.ibb.co/23ypfxBq/curtain-sheer-B6-H5y-JXx.jpg"><div class="cat-label">شفافة</div></div>
+                    <div class="cat-card" onclick="openCat('ديكور')"><img src="https://i.ibb.co/JRd7B9dC/42edce8e89a20200950e110c2d8d41b2.jpg"><div class="cat-label">ديكور</div></div>
+                    <div class="cat-card" onclick="openCat('رول')"><img src="https://i.ibb.co/d4GXf0HM/curtain-roller-5c189-CRe.jpg"><div class="cat-label">رول</div></div>
+                </div>
+            </section>
+
+            <section class="features-section">
+                <h2>لماذا شبابيك؟</h2>
+                <div class="features-grid">
+                    <div class="f-card"><div class="f-icon"><i class="fa-solid fa-shield-halved"></i></div><h3>ضمان الجودة</h3><p>أرقى الأقمشة مع ضمان حقيقي.</p></div>
+                    <div class="f-card"><div class="f-icon"><i class="fa-solid fa-truck-fast"></i></div><h3>تركيب منزلي</h3><p>فريق فني متخصص للقياس والتركيب.</p></div>
+                    <div class="f-card"><div class="f-icon"><i class="fa-solid fa-ruler-combined"></i></div><h3>مقاسات مخصصة</h3><p>تفصيل حسب طلبك بدقة.</p></div>
+                    <div class="f-card"><div class="f-icon"><i class="fa-solid fa-palette"></i></div><h3>تصاميم حصرية</h3><p>موديلات تناسب ذوقك الرفيع.</p></div>
+                </div>
+            </section>
+        </div>
+
+        <div id="aboutPage" class="page">
+            <div class="about-container">
+                <h2 style="font-size: 2.6rem; font-weight: 800; margin: 45px 0;">شبابيك للستائر</h2>
+                <div class="about-text-content">
+                    <p>تأسست شبابيك للستائر بهدف تقديم أفخم وأجود أنواع الستائر المنزلية في العراق. نؤمن بأن الستائر ليست مجرد قطعة قماش، بل هي عنصر أساسي في تصميم المنزل يعكس ذوق أصحابه ويضيف لمسة من الأناقة والفخامة.</p>
+                </div>
+                <div class="stats-grid">
+                    <div class="stat-card"><div class="stat-number">+500</div><p>عميل سعيد</p></div>
+                    <div class="stat-card"><div class="stat-number">+50</div><p>تصميم حصري</p></div>
+                    <div class="stat-card"><div class="stat-number">+10</div><p>سنوات خبرة</p></div>
+                </div>
+            </div>
+        </div>
+
+        <div id="contactPage" class="page">
+            <div style="background:var(--bg); padding:70px 5%; text-align:center; max-width: 850px; margin: 60px auto; border-radius: 25px;">
+                <h2 style="margin-bottom: 30px;">تواصل معنا</h2>
+                <p style="font-size: 1.2rem;"><i class="fa-solid fa-location-dot"></i> العراق - بغداد</p>
+                <p style="font-size: 1.2rem; direction: ltr; margin: 20px 0;"><i class="fa-solid fa-phone"></i> +964 788 300 2797</p>
+                <button class="btn-gold" style="background:#25D366;" onclick="window.location.href='https://wa.me/9647883002797'">تواصل واتساب مباشر</button>
+            </div>
+        </div>
+
+        <div id="adminPanel" class="page">
+            <div class="admin-box">
+                <h2>إدارة المنتجات السحابية</h2>
+                <select id="aCat"><option>بلاك أوت</option><option>شفافة</option><option>ديكور</option><option>رول</option></select>
+                <input type="text" id="aName" placeholder="اسم المنتج">
+                <input type="number" id="aPrice" placeholder="السعر لكل م²">
+                <input type="text" id="aImg" placeholder="رابط الصورة">
+                <button class="btn-gold" style="width:100%" onclick="saveProd()">حفظ ونشر المنتج</button>
+                <div id="adminList" style="margin-top:20px;"></div>
+            </div>
+        </div>
+
+        <div id="categoryView" class="page"><h2 id="catTitle" style="text-align:center; padding: 45px 0; font-size: 2.2rem; font-weight: 800;"></h2><div id="catGrid" style="display:grid; grid-template-columns: repeat(auto-fill, minmax(290px, 1fr)); gap: 25px; padding: 0 5%;"></div></div>
+        
+        <div id="productCalculator" class="page">
+            <div style="max-width: 1250px; margin: 50px auto; display: grid; grid-template-columns: 1fr 1fr; gap: 55px; padding: 0 5%;">
+                <div class="calc-box">
+                    <h1 id="pName" style="font-size: 2.4rem; margin-bottom: 12px;"></h1>
+                    <div style="color:var(--gold); font-size: 2.1rem; font-weight: 900; margin: 25px 0;"><span id="pPrice"></span> د.ع / م²</div>
+                    <div style="display:grid; grid-template-columns: 1fr 1fr; gap: 20px;">
+                        <div><label>العرض (سم)</label><input type="number" id="wIn" oninput="doCalc()" style="width:100%; padding:14px; border-radius:8px; border:1px solid #ddd;"></div>
+                        <div><label>الطول (سم)</label><input type="number" id="hIn" oninput="doCalc()" style="width:100%; padding:14px; border-radius:8px; border:1px solid #ddd;"></div>
+                    </div>
+                    <label style="display:flex; align-items:center; justify-content:flex-end; gap:10px; margin:20px 0; background:var(--bg); padding:12px; border-radius:10px; cursor:pointer;">
+                        <span>طلب خدمة التركيب</span><input type="checkbox" id="instIn" style="width:22px; height:22px;">
+                    </label>
+                    <div style="background:var(--brown); color:white; padding:22px; border-radius:15px; margin: 25px 0; text-align:center; font-size: 1.6rem;">الإجمالي التقديري: <span id="resPrice">0</span> د.ع</div>
+                    <button class="btn-gold" style="width:100%; font-size: 1.2rem;" onclick="addToCart()">إضافة إلى السلة</button>
+                </div>
+                <img id="pImg" src="" style="width:100%; border-radius:25px; box-shadow: 0 25px 45px rgba(0,0,0,0.15);">
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <div style="margin-bottom: 40px;">
+            <button class="btn-gold" onclick="showPage('homePage'); document.getElementById('categories').scrollIntoView()">تصفح المنتجات الآن</button>
+        </div>
+        <div class="footer-grid">
+            <div><h3>شبابيك للستائر</h3><p style="opacity:0.8; font-size: 0.95rem; line-height: 1.8;">نقدم أرقى حلول الستائر المنزلية في العراق بأعلى معايير الجودة.</p></div>
+            <div><h3>روابط سريعة</h3><ul style="list-style:none; opacity:0.8; line-height:2.8;"><li onclick="showPage('homePage')">الرئيسية</li><li onclick="showPage('aboutPage')">من نحن</li><li onclick="showPage('contactPage')">تواصل معنا</li></ul></div>
+            <div><h3>تواصل معنا</h3><p style="opacity:0.8; margin-bottom: 5px;">بغداد - العراق</p><p style="direction: ltr; font-weight: 700;">+964 788 300 2797</p></div>
+            <div class="footer-logo">شبابيك</div>
+        </div>
+        <p style="text-align:center; margin-top:55px; opacity:0.35; font-size: 0.85rem;">© 2026 شبابيك للستائر - جميع الحقوق محفوظة</p>
+    </footer>
+
+    <script>
+        // إعدادات Firebase الخاصة بمشروعك
+        const firebaseConfig = {
+            apiKey: "AIzaSyD1TENeV6RkWmrYIjV6seGx84VavsM_tvE",
+            authDomain: "shababekcurtain.firebaseapp.com",
+            databaseURL: "https://shababekcurtain-default-rtdb.asia-southeast1.firebasedatabase.app/",
+            projectId: "shababekcurtain",
+            storageBucket: "shababekcurtain.firebasestorage.app",
+            messagingSenderId: "413811779922",
+            appId: "1:413811779922:web:ace21e11450748eb5fb28b"
+        };
+
+        if (!firebase.apps.length) {
+            firebase.initializeApp(firebaseConfig);
+        }
+        const dbRef = firebase.database().ref('products');
+
+        let cur = null; let cart = []; let adminClicks = 0;
+
+        function showPage(id) {
+            document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
+            document.getElementById(id).classList.add('active');
+            window.scrollTo(0,0);
+        }
+
+        function checkAdmin() {
+            adminClicks++;
+            if(adminClicks >= 5) {
+                const pass = prompt("الرمز:");
+                if(pass === "1234") { showPage('adminPanel'); showAdminList(); }
+                adminClicks = 0;
+            } else { showPage('homePage'); }
+        }
+
+        function openCat(name) {
+            document.getElementById('catTitle').innerText = 'منتجات ' + name;
+            const grid = document.getElementById('catGrid');
+            grid.innerHTML = '<p style="text-align:center; grid-column:1/-1;">جاري التحميل من السحابة...</p>';
+
+            dbRef.on('value', (snap) => {
+                const data = snap.val();
+                const items = data ? Object.values(data).filter(i => i.category === name) : [];
+                grid.innerHTML = items.map(i => `
+                    <div style="background:white; border-radius:18px; overflow:hidden; box-shadow:0 6px 18px rgba(0,0,0,0.1); cursor:pointer;" onclick='openCalc(${JSON.stringify(i)})'>
+                        <img src="${i.img}" style="width:100%; height:290px; object-fit:cover;">
+                        <div style="padding:22px; text-align:center;"><h3>${i.name}</h3><p style="color:var(--gold); font-weight:900;">${i.price} د.ع / م²</p></div>
+                    </div>`).join('') || '<p style="text-align:center; grid-column:1/-1;">لا توجد منتجات حالياً.</p>';
+            });
+            showPage('categoryView');
+        }
+
+        function openCalc(p) { 
+            cur = p; 
+            document.getElementById('pName').innerText = p.name; 
+            document.getElementById('pPrice').innerText = p.price; 
+            document.getElementById('pImg').src = p.img; 
+            document.getElementById('resPrice').innerText = "0"; 
+            showPage('productCalculator'); 
+        }
+
+        function doCalc() { 
+            const w = document.getElementById('wIn').value/100; 
+            const h = document.getElementById('hIn').value/100; 
+            if(w && h) document.getElementById('resPrice').innerText = Math.round(w*h*cur.price).toLocaleString(); 
+        }
+        
+        function addToCart() { 
+            const total = document.getElementById('resPrice').innerText;
+            if(total === "0") return alert("يرجى إدخال المقاسات");
+            cart.push({ n: cur.name, p: total }); 
+            document.getElementById('globalCartCount').innerText = cart.length; alert("تمت إضافة المنتج للسلة"); 
+        }
+
+        function openCart() { 
+            if(cart.length === 0) return alert("سلة التسوق فارغة");
+            let message = "طلب جديد من سلة شبابيك للستائر:\n\n"; 
+            cart.forEach((item, index) => { message += `${index + 1}- المنتج: ${item.n}\n   السعر: ${item.p} د.ع\n\n`; });
+            window.location.href = `https://wa.me/9647883002797?text=${encodeURIComponent(message)}`; 
+        }
+
+        // الوظيفة المصلحة لزر حفظ ونشر المنتج
+        function saveProd() {
+            const name = document.getElementById('aName').value;
+            const price = document.getElementById('aPrice').value;
+            const img = document.getElementById('aImg').value;
+            const category = document.getElementById('aCat').value;
+
+            if(!name || !price || !img) {
+                alert("يرجى ملء كافة الحقول");
+                return;
+            }
+
+            const newProd = {
+                id: Date.now(),
+                category: category,
+                name: name,
+                price: price,
+                img: img
+            };
+
+            dbRef.push(newProd).then(() => {
+                alert("✅ تم الحفظ في السحاب بنجاح!");
+                document.getElementById('aName').value = "";
+                document.getElementById('aPrice').value = "";
+                document.getElementById('aImg').value = "";
+                showAdminList();
+            }).catch(e => alert("خطأ: " + e.message));
+        }
+
+        function showAdminList() {
+            dbRef.once('value', (snap) => {
+                const data = snap.val();
+                const items = data ? Object.entries(data) : [];
+                document.getElementById('adminList').innerHTML = items.map(([key, i]) => `
+                    <div style="display:flex; justify-content:space-between; padding:8px; border-bottom:1px solid #ddd;">
+                        <span>${i.name} (${i.category})</span>
+                        <button onclick="delProd('${key}')" style="color:red; border:none; cursor:pointer;">حذف</button>
+                    </div>`).join('');
+            });
+        }
+
+        function delProd(key) {
+            if(confirm("حذف المنتج؟")) dbRef.child(key).remove().then(() => showAdminList());
+        }
+    </script>
+</body>
+</html>
