--- a/ai.html
+++ b/ai.html
@@ -47,15 +47,13 @@ header { background: var(--white); padding: 10px 5%; display: flex; justify-cont
 
 <div class="top-banner">
     <span>دكتور ديكور - مستشارك الذكي من شبابيك</span>
-    <a href="https://wa.me/9647883002797" style="color:var(--whatsapp); text-decoration:none; font-weight:bold;">
-        <i class="fab fa-whatsapp"></i> استشارة مباشرة
-    </a>
+    <a href="https://wa.me/9647883002797" style="color:var(--whatsapp); text-decoration:none; font-weight:bold;"><i class="fab fa-whatsapp"></i> استشارة مباشرة</a>
 </div>
 
 <header>
     <div style="font-weight:900; line-height:1;">شبابيك<br><span style="color:var(--gold); font-size:0.8rem;">للستائر</span></div>
     <img src="https://i.ibb.co/3y1ZNCk0/1.png" class="logo-img" onclick="location.href='index.html'">
-    <div style="width: 50px;"></div> 
+    <div style="width: 50px;"></div>
 </header>
 
 <div class="nav-bar">
@@ -74,7 +72,7 @@ header { background: var(--white); padding: 10px 5%; display: flex; justify-cont
         <img id="drAvatar" src="https://i.ibb.co/q3z1RscN/Neutral-removebg-preview.png">
     </div>
     <div class="chat-bubble" id="aiResponse">
-        أهلاً بك! أنا دكتور ديكور. التقط صورة لغرفتك وسأقترح عليك الستارة المثالية.
+        أهلاً بك! أنا دكتور ديكور. التقط صورة لغرفتك وسأقترح عليك الستارة المثالية التي تناسب أثاثك وألوان منزلك.
     </div>
     <input type="file" id="aiCamera" accept="image/*" capture="environment" style="display: none;" onchange="analyzeRoom(this)">
     <button onclick="document.getElementById('aiCamera').click()" class="btn-gold">
@@ -97,70 +95,55 @@ header { background: var(--white); padding: 10px 5%; display: flex; justify-cont
 <script>
 async function analyzeRoom(input) {
     if (!input.files || !input.files[0]) return;
-    const file = input.files[0];
     const box = document.getElementById('aiResponse');
     const avatar = document.getElementById('drAvatar');
 
     avatar.src = "https://i.ibb.co/ZzMvg7Mz/Disgust-removebg-preview.png"; 
-    box.innerHTML = `<i class="fas fa-spinner fa-spin"></i> جاري التحليل...`;
+    box.innerHTML = `<i class="fas fa-spinner fa-spin"></i> جاري تحليل الغرفة، انتظر قليلاً...`;
 
     const reader = new FileReader();
-    reader.readAsDataURL(file);
+    reader.readAsDataURL(input.files[0]);
     reader.onload = async (e) => {
-        const base64Data = e.target.result.split(',')[1];
+        const img = new Image();
+        img.src = e.target.result;
+        img.onload = async () => {
+            const canvas = document.createElement('canvas');
+            const MAX_WIDTH = 600;
+            canvas.width = MAX_WIDTH;
+            canvas.height = img.height * (MAX_WIDTH / img.width);
+            const ctx = canvas.getContext('2d');
+            ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
+            const base64Data = canvas.toDataURL('image/jpeg', 0.6).split(',')[1];
 
-        try {
-            const response = await fetch("https://0.bilalmohammedsalem23.workers.dev/", {
-                method: "POST",
-                headers: {
-                    "Content-Type": "application/json"
-                },
-                body: JSON.stringify({ image: base64Data })
-            });
+            try {
+                // هنا نرسل البيانات إلى Worker
+                const response = await fetch("https://0.bilalmohammedsalem23.workers.dev/", {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ image: base64Data })
+                });
 
-            const data = await response.json();
-            avatar.src = "https://i.ibb.co/q3z1RscN/Neutral-removebg-preview.png";
+                const data = await response.json();
 
-            if (data && data.candidates) {
-                box.innerHTML = data.candidates[0].content.parts[0].text;
-                confetti({ particleCount: 150, spread: 70, origin: { y: 0.6 } });
-            } else {
-                box.innerHTML = "لم يتمكن الذكاء الاصطناعي من التحليل.";
+                avatar.src = "https://i.ibb.co/q3z1RscN/Neutral-removebg-preview.png";
+                
+                // إذا كان لدينا رد تجريبي أو فعلي
+                if (data && data.message) {
+                    box.innerHTML = data.message; 
+                    confetti({ particleCount: 150, spread: 70, origin: { y: 0.6 } });
+                } else {
+                    box.innerHTML = "تم استلام الصورة بنجاح! (رد تجريبي)";
+                }
+
+            } catch (err) {
+                console.error(err);
+                box.innerHTML = "عذراً، فشل الاتصال. حاول مرة أخرى.";
+                avatar.src = "https://i.ibb.co/q3z1RscN/Neutral-removebg-preview.png";
             }
-        } catch (err) {
-            console.error(err);
-            box.innerHTML = "عذراً، فشل الاتصال. حاول مرة أخرى.";
-            avatar.src = "https://i.ibb.co/q3z1RscN/Neutral-removebg-preview.png";
-        }
+        };
     };
 }
-    async function testWorker() {
-  const fileInput = document.getElementById('aiCamera');
-  if (!fileInput.files[0]) return alert("اختر صورة أولاً!");
-
-  const reader = new FileReader();
-  reader.readAsDataURL(fileInput.files[0]);
-  reader.onload = async (e) => {
-    const base64Data = e.target.result.split(',')[1];
-
-    const response = await fetch("https://0.bilalmohammedsalem23.workers.dev/", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ image: base64Data })
-    });
-
-    const result = await response.json();
-    console.log("رد الـ Worker:", result);
-    alert(JSON.stringify(result, null, 2));
-  };
-}
 </script>
-<main>
-  <!-- ملف الصورة -->
-  <input type="file" id="aiCamera" accept="image/*">
 
-  <!-- زر الاختبار -->
-  <button onclick="testWorker()">اختبر وصول الصورة إلى الـ Worker</button>
-</main>
 </body>
 </html>
